--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/index.css" />
     <title>Login Page</title>
   </head>
   <body>
    <!-- Login Box -->
     <div></br>
-      <h3>Login</h3>
+      <h3>DASHBOARD</h3>
       <label for="user">Username</label>
       <input type="text" id="user" /><br />
 
@@ -25,10 +25,13 @@
 
       <!-- BUTTON -->
     <button onclick="myFunction()">Login</button>
+
+      <!-- Password Change -->
+    
        </div>
 
   
 
-    <script src="index.js"></script>
+    <script src="../scripts/index.js"></script>
   </body>
 </html>
