Made a dashboard prototype, removed nav bar from index.html.

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -4,33 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <title>Login Page</title>
+    <link rel="stylesheet" href="../css/dashboard.css" />
+    <title>Dashboard</title>
   </head>
   <body>
-   <!-- Login Box -->
-    <div></br>
-      <h3>DASHBOARD</h3>
-      <label for="user">Username</label>
-      <input type="text" id="user" /><br />
 
-      <label for="pass">Password</label>
-      <input type="text" id="pass" />
-      <h5>
-        <a
-          href="passchange.html"
-          >Forgot Your Password?</a
-        >
-      </h5>
+       <!-- Login Box -->
 
-      <!-- BUTTON -->
-    <button onclick="myFunction()">Login</button>
-
-      <!-- Password Change -->
+      <div class="flexbox">
+        <div class="widget">
+          <div class="dashboard">
+            <h2>Dashboard</h2>
     
-       </div>
+        </div>
 
-  
+        <div class="widget">
+          <h2>Balance</h2>
+          <p>£10.000</p>
+        </div>
+
+        <div class="widget">
+          <h2>Savings</h2>
+          <p>£540</p>
+        </div>
+
+        <div class="widget3">
+          <h2>Need a loan or maybe just some help?</h2>
+          <p>Click Here</p>
+        </div>
+
+      <div class="cursor-trail"></div>
+
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </div>
 
     <script src="../scripts/index.js"></script>
   </body>
