--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -57,6 +57,6 @@
       <div class="circle"></div>
     </div>
 
-    <script src="../scripts/index.js"></script>
+    <script src="../scripts/dashboard.js"></script>
   </body>
 </html>
