--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,28 @@ button {
   background-color: rgb(255, 255, 255);
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+#video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+
+#video-background iframe {
+  width: 100%;
+  height: 100%;
+}
+
+
 input {
   width: 125px;
   /*size of space around content*/
