--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* OUTTER LAYER*/
@@ -12,77 +11,110 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: flex-start;
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
-  background-color: grey;
-  border-color: azure;
+  padding: 0px;
   border-radius: 5px;
   width: 80%;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .widget {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 30px;
   width: 75%;
   margin: 10px;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease;
+  background-image: linear-gradient(grey);
 }
 
-.widget3 {
-  background-color: #f2f2f2;
+.widget:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+
+.widget1 {
+  background-color: #537188;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 30px;
   width: 75%;
   margin: 10px;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease;
+  box-shadow: inset 0 0 5px #000000;
+}
+
+.widget1:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+
+.widget2 {
+  background-color: #cbb279;
+  border-radius: 5px;
+  padding: 30px;
+  width: 75%;
+  margin: 10px;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease;
+  box-shadow: inset 0 0 5px #000000;
+}
+
+.widget2:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
+}
+.widget3 {
+  background-color: #e1d4bb;
+  border-radius: 5px;
+  padding: 30px;
+  width: 75%;
+  margin: 10px;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease-in;
+  box-shadow: inset 0 0 5px #000000;
+}
+
+.widget3:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 16px -7px rgba(0, 0, 0, 0.3);
 }
 
 body {
+  font-family: "Rubik", sans-serif;
   height: 100%;
   cursor: url("../assets/cursors/gam1109.cur"), auto;
-  background-color: aqua;
+  background-color: rgb(77, 77, 77);
 }
 
-.cursor-trail {
-  position: fixed;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 999999; /* Ensure the cursor trail appears above other elements */
+.chart-heading {
+  font-family: "Rubik", sans-serif;
+  color: #023047;
+  text-transform: uppercase;
+  font-size: 24px;
+  text-align: center;
 }
 
-.cursor-trail:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); /* Adjust the color and transparency */
-  animation: cursor-trail-animation 1.5s infinite;
+.chart-container {
+  width: 200px;
 }
 
-@keyframes cursor-trail-animation {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 0.8;
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(0.2);
-    opacity: 0.4;
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 0.8;
-  }
+.programming-stats {
+  font-family: "Rubik", sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin: 0 auto;
+  width: fit-content;
+  box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding: 8px 32px;
+  color: #023047;
+  transition: all 400ms ease;
+}
+
+.chartId {
+  width: 20vh;
+  height: 30vh;
 }
